--- a/solana-1/tsconfig.json
+++ b/solana-1/tsconfig.json
@@ -12,6 +12,6 @@
     "types": ["node"],
     "outDir": "dist"
   },
-  "include": ["src/**/*"],
+  "include": ["**/*"],
   "exclude": ["node_modules"]
 }
